[FIX] fixed all hover states on mobile, including card rotation, fixed some spelling mistakes, fixed background video not working on mobile, added longer animation delay

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -11,12 +11,14 @@
     }
   }
 
-  &:hover,
-  &:active {
-    transform: scale(1.2);
+  @include can-hover {
+    &:hover,
+    &:active {
+      transform: scale(1.2);
 
-    svg {
-      fill: $tertiary-color;
+      svg {
+        fill: $tertiary-color;
+      }
     }
   }
 }
@@ -44,9 +46,11 @@
     font-size: 1.425rem;
   }
 
-  &:hover,
-  &:active {
-    color: $color-white;
+  @include can-hover {
+    &:hover,
+    &:active {
+      color: $color-white;
+    }
   }
 
   &::before,
@@ -64,10 +68,12 @@
     transition: all 0.2s;
   }
 
-  &:hover::before,
-  &:active::before {
-    visibility: visible;
-    transform: scaleX(1);
+  @include can-hover {
+    &:hover::before,
+    &:active::before {
+      visibility: visible;
+      transform: scaleX(1);
+    }
   }
 }
 
@@ -92,23 +98,20 @@
     box-shadow: 0 1px 2px rgba($color: $color-black, $alpha: 0.1);
   }
 
-  &:hover {
-    color: $tertiary-color;
-    background-color: $color-white;
-    transform: translateY(-2px);
-    box-shadow: 0 3px 6px rgba($color: $color-black, $alpha: 0.2);
-  }
+  @include can-hover {
+    &:hover {
+      color: $tertiary-color;
+      background-color: $color-white;
+      transform: translateY(-2px);
+      box-shadow: 0 3px 6px rgba($color: $color-black, $alpha: 0.2);
+    }
 
-  &:active {
-    color: $tertiary-color;
-    background-color: $color-white;
-    transform: translateY(1px);
-    box-shadow: 0 2px 4px rgba($color: $color-black, $alpha: 0.15);
-  }
-
-  &:disabled {
-    background-color: $color-grey-light;
-    color: $color-grey-dark;
+    &:active {
+      color: $tertiary-color;
+      background-color: $color-white;
+      transform: translateY(1px);
+      box-shadow: 0 2px 4px rgba($color: $color-black, $alpha: 0.15);
+    }
   }
 
   &:disabled {
