--- a/src/styles/utilities/_mixins.scss
+++ b/src/styles/utilities/_mixins.scss
@@ -53,3 +53,9 @@
     @content;
   }
 }
+
+@mixin can-hover {
+  @media (hover: hover) {
+    @content;
+  }
+}
